# implicit-hie

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  codex.tags  hie.yaml  hie.yaml.cbl  hie.yaml.stack  implicit-hie.cabal  package.yaml  stack.yaml
.github/: FUNDING.yml
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lib.hs
src/Hie/: CabalHelper.hs  Locate.hs  Logger.hs  Yaml.hs
src/Hie/Cabal/: Parser.hs
test/: Spec.hs  benchSection  haskell-language-server-cabal  hie.yaml.cbl  stackHie.yaml
test/unit/: CabalHelperSpec.hs  Spec.hs
test/utils/: TestUtils.hs
